unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/Enrollment_Checklist_Tracker__c.object-meta.xml
<CustomObject>
    <label>Enrollment Checklist Tracker</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Enrollment Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Checklist Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>