unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Amendments_Involved__c.field-meta.xml
<CustomField>
    <fullName>Amendments_Involved__c</fullName>
    <label>Amendments Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>