unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Asses_Request_Completed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asses_Request_Completed_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asses Request Completed Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>