unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Assess_Request_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Assess_Request_Completed_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assess Request Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>