unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Assess_Request_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Assess_Request_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assess Request Deadline</label>
    <type>Date</type>
</CustomField>