unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/CaseConfig_Task_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CaseConfig_Task_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseConfig Task Completed Date</label>
    <type>DateTime</type>
</CustomField>