unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/CaseConfig_Task_Deadline__c.field-meta.xml
<CustomField>
    <fullName>CaseConfig_Task_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseConfig Task Deadline</label>
    <type>Date</type>
</CustomField>