unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/CaseConfig_Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>CaseConfig_Task_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseConfig Task Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>