unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/CSM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSM_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSM Notes</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>