unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Date_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Request Received</label>
    <type>Date</type>
</CustomField>