unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Enroller_Preparation_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Enroller_Preparation_Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroller Preparation Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>