unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Enroller_Preparation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Enroller_Preparation_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroller Preparation Deadline</label>
    <type>Date</type>
</CustomField>