unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Enroller_Preparation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enroller_Preparation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroller Preparation Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>