unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Enrollment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment End Date</label>
    <type>Date</type>
</CustomField>