unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>ER/MSS/Enroller</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Selerix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>