unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/External_Coordination_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>External_Coordination_Completed_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Coordination Completed DateTime</label>
    <type>DateTime</type>
</CustomField>