unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/External_Coordination_ED_Completed__c.field-meta.xml
<CustomField>
    <fullName>External_Coordination_ED_Completed__c</fullName>
    <label>External Coordination &amp; ED Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>