unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/External_Coordination_ED_Deadline__c.field-meta.xml
<CustomField>
    <fullName>External_Coordination_ED_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Coordination &amp; ED Deadline</label>
    <type>Date</type>
</CustomField>