unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/External_Coordination_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Coordination_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Coordination Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>