unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Fix_testing_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Fix_testing_Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fix testing Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>