unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Fix_Testing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Fix_Testing_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fix Testing Deadline</label>
    <type>Date</type>
</CustomField>