unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Fix_Testing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fix_Testing_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fix Testing Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>