unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Go_Live_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Task_Completed__c</fullName>
    <label>Go Live Task Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>