unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Go_Live_Task_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Task_Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Go Live Task Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>