unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Go_Live_Task_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Task_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Go Live Task Deadline</label>
    <type>Date</type>
</CustomField>