unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Go_Live_Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Task_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Go Live Task Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>