unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Internal_Kick_off_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Internal_Kick_off_Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Kick-off Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>