unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Internal_Kick_off_Coordination_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Internal_Kick_off_Coordination_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Kick-off Coordination Deadline</label>
    <type>Date</type>
</CustomField>