unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Internal_Kick_off_Coordination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Kick_off_Coordination_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Kick-off Coordination Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>