unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Internal_Kickoff_Coordination__c.field-meta.xml
<CustomField>
    <fullName>Internal_Kickoff_Coordination__c</fullName>
    <label>Internal Kick-off Coordination Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>