unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/MSS_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>MSS_Tasks_Completed__c</fullName>
    <label>MSS Tasks Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>