unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/MSS_Tasks_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MSS_Tasks_Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSS Tasks Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>