unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/MSS_Tasks_Deadline__c.field-meta.xml
<CustomField>
    <fullName>MSS_Tasks_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSS Tasks Deadline</label>
    <type>Date</type>
</CustomField>