unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/MSS_Tasks_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSS_Tasks_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSS Tasks Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>