unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>Case__r.Master_Group__r.Partner__r.Name</formula>
    <label>Partner</label>
    <type>Text</type>
</CustomField>