unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Post_Enrollment_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Post_Enrollment_Completed_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Enrollment Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>