unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Post_Enrollment_Completed_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Post_Enrollment_Completed_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Enrollment Completed Deadline</label>
    <type>Date</type>
</CustomField>