unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Post_Enrollment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Enrollment_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Enrollment Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>