unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Salesforce__c</fullName>
    <label>Salesforce Coordination Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>