unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Salesforce_Coordination_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Coordination_Date_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Coordination Date Completed</label>
    <type>DateTime</type>
</CustomField>