unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Salesforce_Coordination_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Coordination_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Coordination Deadline</label>
    <type>Date</type>
</CustomField>