unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Name__c</fullName>
    <formula>Case__r.Master_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Name</label>
    <type>Text</type>
</CustomField>