unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Scheme_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Name_Number__c</fullName>
    <formula>Scheme_Name__c  &amp; &quot; / &quot; &amp;  Scheme_Number__c</formula>
    <label>Scheme Name/Number</label>
    <type>Text</type>
</CustomField>