unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Scheme_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheme Number</label>
    <length>90</length>
    <type>Text</type>
</CustomField>