unpackaged/main/default/objects/Enrollment_Checklist_Tracker__c/fields/Upsell__c.field-meta.xml
<CustomField>
    <fullName>Upsell__c</fullName>
    <label>Upsell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>